# nss-keycloak

./: README.md  dev.docker-compose.yml  example.docker-compose.yml
keycloak/: Dockerfile
keycloak/data/: test-realm.json  test-users-0.json
nss-keycloak/: Cargo.toml  Dockerfile  example.config.toml  example.nsswitch.conf
nss-keycloak/src/: group.rs  lib.rs  passwd.rs
nss-keycloak/src/config/: mod.rs  model.rs
nss-keycloak/src/keycloak/: auth.rs  groups.rs  mod.rs  model.rs  users.rs
nss-keycloak/tests/: config_integration.rs  group_integration.rs  keycloak_auth_integration.rs  passwd_integration.rs
nss-keycloak/tests/files/: config.toml
