[package]
name = "nss-keycloak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nss_keycloak"
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.80"
lazy_static = "1.4.0"
libc = "0.2.153"
libnss = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.10.0"
